fix: histoire layout issue

--- a/svws-webclient/src/ui-components/ts/src/assets/styles/_histoire.css
+++ b/svws-webclient/src/ui-components/ts/src/assets/styles/_histoire.css
@@ -1,11 +1,3 @@
-.__histoire-sandbox {
-	@apply m-5;
-}
-
-.__histoire-sandbox {
+.histoire-generic-render-story {
 	contain: layout;
-
-	&.htw-overflow-auto {
-		overflow: visible;
-	}
 }
